<resources>
    <string name="app_name">CS2340 Proj 1</string>
    <string name="title_class_schedule">Class Schedule</string>
    <string name="title_todo_list">To-Do List</string>
    <string name="title_notifications">Notifications</string>
    <string name="cardFiller">TextView</string>
    <string name="save_card_editor">Save</string>
    <string name="class_schedule">Class Schedule</string>
    <string name="todo_list">To-Do List</string>
    <string name="professorCard">Professor</string>
    <string name="courseCard">Course</string>
    <string name="monday_String">Mon</string>
    <string name="tuesday_String">Tue</string>
    <string name="wednesday_String">Wed</string>
    <string name="thursday_String">Thur</string>
    <string name="friday_String">Fri</string>
    <string name="daysOfWeekCard">Days of the Week</string>
    <string name="timeCard">Time</string>
    <string name="locationCard">Location</string>
    <string name="course_time_hint">Course Time</string>
    <string name="course_location_hint">Class Location</string>
    <string name="course_name_hint">Course Abbreviation</string>
    <string name="course_professor_hint">Course Professor</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="course">Card Course</string>
    <string name="card_layout_professor">professor</string>
    <string name="cancel_card_editor">cancel</string>
    <string name="to">-</string>
    <string name="todo_date_string">date</string>
    <string name="assignment_task_string">Assignment</string>
    <string name="assignment_you_need_to_complete_string">Enter Assignment</string>
    <string name="todo_title">todo title</string>
    <string name="dueDateHeader">Due Date</string>
    <string name="exam_task_string">Exam</string>
    <string name="exam_date">Exam Date</string>
    <string name="selectDate">Select Date</string>
    <string name="exam_name">Exam Name</string>
    <string name="Completed_String">Completed:</string>
    <string name="complete_by">Completed By</string>
    <string name="task">Task</string>
    <string name="enter_task">Enter Task</string>
    <string name="task_1">TASK</string>


</resources>