<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/white"
    android:backgroundTint="@color/white">

    <TextView
        android:id="@+id/todoInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/courseInputEdit"
        android:text="@string/assignment_task_string" />

    <EditText
        android:id="@+id/todoInputEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints="CS2340"
        android:hint="@string/assignment_you_need_to_complete_string"
        android:inputType="textCapCharacters" />

    <TextView
        android:id="@+id/todo_professorInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/professorInputEdit"
        android:text="@string/courseCard" />

    <EditText
        android:id="@+id/todo_courseInputEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:inputType="text"
        android:hint="@string/course_name_hint" />


    <TextView
        android:id="@+id/todo_timeInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeCard" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/todo_start_time_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/time_button_color"
            android:text="@string/start_time"
            android:textColor="@color/white" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.05" >
        </Space>

        <Button
            android:id="@+id/todo_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/time_button_color"
            android:text="@string/todo_date_string"
            android:textColor="@color/white" />

    </LinearLayout>


    <TextView
        android:id="@+id/locationInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/todo_locationInputEdit"
        android:text="@string/locationCard" />


    <EditText
        android:id="@+id/todo_locationInputEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_location_hint"
        android:inputType="text"
        tools:ignore="Autofill" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/todo_save_card_edit"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/time_button_color"
            android:text="@string/save_card_editor"
            android:textColor="@color/white" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.1" >
        </Space>

        <Button
            android:id="@+id/todo_cancel_card_edit"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/time_button_color"
            android:text="@string/cancel_card_editor"
            android:textColor="@color/white" />
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>