<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/class_schedule">

    <fragment
        android:id="@+id/class_schedule"
        android:name="com.example.cs2340proj1.ui.courses.CoursesFragment"
        android:label="@string/title_class_schedule"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/todo_list"
        android:name="com.example.cs2340proj1.ui.todo.TodoListFragment"
        android:label="@string/title_todo_list"
        tools:layout="@layout/fragment_todo_list" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.cs2340proj1.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>