<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:backgroundTint="@color/card_background_color"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/card_text_color"
        android:orientation="horizontal"
        android:padding="26dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/card_text_color"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/courseSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00AA4C4C"
                android:backgroundTint="#00AA2525"
                android:text="@string/course"
                android:textAllCaps="true"
                android:textColor="@color/card_text_color"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Professor: "
                    android:textColor="@color/card_text_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_weight=".2"/>

                <TextView
                    android:id="@+id/professorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/professorCard"
                    android:textColor="@color/card_text_color"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:gravity="right"/>

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Location: "
                    android:textColor="@color/card_text_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_weight="1"
                    android:id="@+id/classLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/locationCard"
                    android:textColor="@color/card_text_color"
                    android:textSize="20dp"
                    android:gravity="right"/>

            </LinearLayout>


            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="Days: "
                    android:textColor="@color/card_text_color"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/classDays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/class_schedule"
                    android:textColor="@color/card_text_color"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:gravity="right"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="Time: "
                    android:textColor="@color/card_text_color"
                    android:textSize="20sp"
                    android:layout_weight="2"/>

                <TextView
                    android:id="@+id/classTimeStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start_time"
                    android:textColor="@color/card_text_color"
                    android:textSize="20sp"
                    android:gravity="right"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/to"
                    android:textColor="@color/card_text_color"
                    android:textSize="20sp"
                    android:gravity="right"/>

                <TextView
                    android:id="@+id/classTimeEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/end_time"
                    android:textColor="@color/card_text_color"
                    android:textSize="20sp"
                    android:gravity="right"/>

            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/course_edit_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:src="@drawable/edit_icon"
            app:tint="@color/time_button_color"
            card_view:ignore="InefficientWeight" />

    </LinearLayout>
</androidx.cardview.widget.CardView>