<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="7dp"
        android:backgroundTint="@color/card_background_color"
        card_view:cardCornerRadius="20dp"
        card_view:elevation="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/card_text_color"
            android:orientation="horizontal"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/card_text_color"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/todo_card_exam_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00AA4C4C"
                    android:backgroundTint="#00AA2525"
                    android:text="@string/exam_task_string"
                    android:textAllCaps="true"
                    android:textColor="@color/card_text_color"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/todo_card_exam_course"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/courseCard"
                    android:textColor="@color/card_text_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/todo_card_exam_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exam_date"
                    android:textColor="@color/card_text_color"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/todo_card_exam_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/locationCard"
                    android:textColor="@color/card_text_color"
                    android:textSize="20sp" />


                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Check if Completed: "
                        android:textColor="@color/card_text_color"
                        android:layout_weight="1"
                        android:textSize="20sp" />

                    <CheckBox
                        android:id="@+id/examTodoCheckBox"
                        android:layout_width="24dp"
                        android:layout_height="23dp"
                        android:layout_weight="1"
                        android:buttonTint="#37A699" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:gravity="bottom">

                <ImageButton
                    android:id="@+id/examtodo_edit_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:backgroundTint="#00FFFFFF"
                    android:src="@drawable/edit_icon"
                    app:tint="@color/time_button_color" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>